# twenty-fourty-eight-solver

./: Cargo.toml  LICENSE  README.md  bacon.toml  find-optimal-params.py  optimal-settings.txt  parameter-search.py
.cargo/: config.toml
benches/benchmarks/: main.rs
src/: lib.rs  main.rs  simd.rs
src/board/: editor.rs  mod.rs  simd_utils.rs
src/search/: cache.rs  eval.rs  heuristic.rs  mcts.rs  mean_max.rs  mod.rs  node.rs  search_state.rs
