[package]
name = "twenty-fourty-eight-solver"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = false
opt-level = 3
strip = "debuginfo"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clipboard = "0.5"
crossterm = "0.28"
env_logger = "0.11"
indicatif = "0.17"
itertools = "0.14"
log = "0.4"
number_prefix = "0.4"
rand = "0.9"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.9"
